<resources>
    <string name="app_name">Techlab</string>
    <string name="BorrowBtnName">Geleende Producten</string>
    <string name="inventarisBtnName">Inventaris</string>
    <string name="RequestBtn">Aanvragen</string>
    <string name="productFabrikant">ProductFabrikant:</string>
    <string name="aantalProduct">Aantal product:</string>
    <string name="productCategorie">Product categorie</string>
    <string name="aantalGebroken">Aantal gebroken:</string>
    <string name="omschrijving">Omschrijving:</string>
    <string name="productUpdate">Product UpDate</string>
    <string name="schoolEmail">School Email:</string>
    <string name="wachtwoord">Wachtwoord:</string>
    <string name="Herhaalwachtwoord">Herhaal Wachtwoord:</string>
    <string name="inloggen">Inloggen</string>
    <string name="registreren">Registreren</string>
    <string name="productToevoegen">product toevoegen</string>
    <string name="voorraad">Voorraad</string>
    <string name="naam">Naam:</string>
    <string name="categorie">Categorie:</string>
    <string name="id">ID:</string>
    <string name="fabrikant">Fabrikant:</string>
    <string name="gebrokenAantal">Gebroken aantal:</string>
    <string name="productVerwijderen">Product verwijderen</string>
    <string name="aanmeldingsformulier">Aanmeldingsformulier</string>
    <string name="voornaam">Voornaam:</string>
    <string name="achternaam">Achternaam:</string>
    <string name="voorwaarden">Gebruikersvoorwaarden Lezen</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>


    //Gebruikers lijst met studentennummer en aantal aangevraagde items
    <string-array name="Gebruikers">
        <item>Robert Kiela</item>
        <item>jan jansen</item>
        <item>gerrit gerritsen</item>
        <item>bob </item>
        <item>dave davitsen</item>
    </string-array>

    <string-array name="Studentnummer">
        <item>0948369</item>
        <item>0965872</item>
        <item>0465873</item>
        <item>0764855</item>
        <item>0248764</item>
    </string-array>

    <string-array name="Aantal_Items">
        <item>2</item>
        <item>4</item>
        <item>1</item>
        <item>2</item>
        <item>1</item>
    </string-array>


    <!--Drop down of category Button-->
    <string-array name="Categorie">
        <item>Alle Producten</item>
        <item>Virtual Reality</item>
        <item>Gameconsole</item>
        <item>MicroComputer</item>
        <item>Drone</item>
        <item>Radio Controlled</item>
        <item>Game</item>
        <item>Smart Technology</item>
        <item>Kabels</item>
        <item>Internet</item>
        <item>Computer</item>
    </string-array>

    // Item lijst met naam van item, id nummer (?image?)
    <string-array name="Items_Gebruikers">
        <item>Raspberrie pie</item>
        <item>Vr-Bril</item>
    </string-array>

    <string-array name="Id_Items">
        <item>184151</item>
        <item>875145</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
