<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Product_management_product_UpdateActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/recyclerview_background"
        android:layout_margin="20dp"
        android:padding="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/productManufacturerTextInputUpDateLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/productManufacturerTextInputUpDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/productFabrikant"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/productNameTextInputUpDateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/productNameTextInputUpDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/naam"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/productStockTextInputUpDateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/productStockTextInputUpDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/aantalProduct"
                android:inputType="numberDecimal"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/productCategoryTextInputUpDateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/productCategoryTextInputUpDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/productCategorie"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/amountBrokenTextInputUpdateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/amountBrokenTextInputUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/aantalGebroken"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/productDescriptionTextInputUpDateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="always"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/productDescriptionTextInputUpDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/omschrijving" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/productImageUpdateView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/imageUpdateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/color_button1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorButton1Text"
            android:onClick="updateProductImage"
            android:text="update afbeelding" />

        <Button
            android:id="@+id/addProductButtonUpDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:onClick="upDateProductButton"
            android:text="@string/productUpdate"
            android:background="@drawable/color_button1"
            android:textColor="@color/colorButton1Text"/>
    </LinearLayout>
</ScrollView>